# bot-starter

./: .env.example  README.md  constants.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
scales/: __init__.py
